--- a/style.css
+++ b/style.css
@@ -158,10 +158,49 @@ body{
 }
 
 .principal{
-    padding: 3em 0;
     width: 940px;
     margin: 0 auto; 
     text-align: justify;
+    padding: 3em 0;
+}
+
+.descripcion{
+    font-style: italic;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+
+.mision, .ambiental, .equipo{
+    background-color: #373f55;
+    color: #FEFEFE;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 30px;
+}
+
+.mision:hover{
+    background-color: #58585c;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.932);
+    transform: scale(1.06);
+    transition: 0.7s;
+    color: #ebc882;
+}
+
+.ambiental:hover{
+    background-color: #58585c;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.932);
+    transform: scale(1.06);
+    transition: 0.7s;
+    color: #ebc882;
+}
+
+.equipo:hover{
+    background-color: #58585c;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.932);
+    transform: scale(1.06);
+    transition: 0.7s;
+    color: #ebc882;
 }
 
 h1{
@@ -172,15 +211,10 @@ h1{
     clear:left;
 }
 
-.descripcion{
-    font-style: italic;
-    font-size: 20px;
-}
-
 h2{
     font-weight: bold;
     font-size: 20px;
-    margin-top: 90px;
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
@@ -188,13 +222,14 @@ h2{
     font-weight: bold;
 }
 
-.mision, .equipo, .ambiental{
+.mision-img, .equipo-img, .ambiental-img{
     margin-top: 30px;
-    width: 80%;
-    height: 370px;
+    width: 50%;
+    height: 250px;
     margin-left: auto;
     margin-right: auto;
     display: block;
+    padding-bottom: 10px;
 }
 
 h3{
@@ -217,18 +252,25 @@ h3{
 .mapa-contenido{
     width: 940px;
     margin: 0 auto;
+    opacity: 50%;
+}
+
+.mapa-contenido:hover{
+    opacity: 100%;
+    transition: 0.6s;
 }
 
 @media screen and (max-width:480px){
    
     .principal, .mapa{
-        margin-left: 5px;
-        margin-right: 5px;
+        margin-left: 15px;
+        margin-right: 15px;
     }
     
     h1{
         text-align: center;
     }
+  
     nav{
         position: static;
         margin-top: 10px;
@@ -242,6 +284,11 @@ h3{
         width: auto;
     }
    
+    .mision-img, .equipo-img, .ambiental-img{
+        width: 200px;
+        height: 200px;
+    }
+
     .transporte, .financieros, .inventario, .devolucion, .personalizada, .soporte{
         width: 120px;
         height: 120px;
@@ -259,4 +306,3 @@ h3{
         width: 70%;
     }
 }
-
